# frog

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AIRFLOW_SETUP.md  CLAUDE.md  Dockerfile  README.md  SKILL.md  account.py  account_summary.py  airflow.Dockerfile  app_common.py  baidu_ocr.py  baidu_ocr_ut.py  beer.csv  calculate_fluctuation.py  celery_app.py  celery_config.py  cigarette.csv  compare_stock_list.py  compare_two_securities.py  config.ini  config.py  convert_fund_position_data.py  convert_stock_position_data.py  create_account.py  daily_fund_position.py  db.py  db_common.py  docker-compose.yml  download_etf_general_info.py  frog_cmd.py  frog_server.py  fund_common.py  game.csv  guotai_parse_position.py  import_stocks.py  index.py  (+33 more)
.github/: copilot-instructions.md
.github/agents/: code-simplifier-apply.agent.md  code-simplifier.agent.md  gem-code-simplifier.agent.md
.github/workflows/: README.md  ci.yml  docker.yml  quality.yml  release.yml  update-deps.yml
app/: __init__.py  email.py
app/model/: __init__.py  monitor_stock.py
app/strategy/: __init__.py  monitor_stock.py
app/templates/: monitor_stock_report.html
backtest/: __init__.py  bt_common.py  buy_guard.py  common.py  etf_rotation.py  etf_trend_follow.py  indicator_rsrs.py  indicator_rsrs_1.py  my_analyzer.py  my_strategy.py  obos_300_500_2.py  obos_addict_9.py  obos_etf_1.py  obos_etf_2.py  obos_hk_0.py  obos_hk_10.py  obos_hk_11.py  obos_hk_2.py  obos_hk_6.py  obos_hk_8.py  obos_hk_9.py  obos_indicator.py  risk_parity_0.py  rotate_500.py  rotate_etf.py  rotate_etf_0.py  rotate_etf_1.py  rotate_etf_2.py  rotate_etf_3.py  rotate_etf_4.py  rotate_etf_5.py  rotate_etf_6.py  rotate_etf_pool.py  rsrs_300_0.py  rsrs_300_1.py  small_market_capital.py  small_market_capital_0.py  small_market_capital_2.py  small_market_capital_3.py  small_market_capital_common.py  (+33 more)
common/: __init__.py  const.py  obos_hk_runner.py  stock_market.py
conf/: __init__.py  global_settings.py
dags/: common_dags.py  download_a_stock_basic_weekly.py  download_daily_basic_a_stock_daily.py  download_daily_data.py  download_etf_daily.py  download_hk_ggt_history_daily.py  download_stk_holdernumber_weekly.py  download_stk_limit_a_stock_daily.py  download_stock_general_info_daily.py  download_stock_history_daily.py  download_stock_history_qfq_weekend.py  download_suspend_d_a_stock_daily.py  download_top10_floatholders_weekly.py  ingest_a_stock.py  ingest_hk_stock.py  monitor_stock_daily.py  monitor_stock_intraday.py  scan_top10_floatholder_weekly.py
doc/: CODE_SIMPLIFIER.md  airflow.md  coding_rule.md  config.md  docker.md  stock_monitor.md
docker/: entrypoint-common.sh
docs/: airflow.md  coding_rule.md  config.md  download_architecture.md  momentum_factor_evaluation.md  nasdaq_a_index_correlation.md  nasdaq_csi1000_correlation.md  obos_factor_evaluation.md  paper_trading.md  ssf_count_factor_evaluation.md  ssf_ratio_change_factor_evaluation.md  ssf_ratio_factor_evaluation.md  stock_monitor.md  volatility_factor_evaluation.md
download/: download_manager.py  download_status.py.bak  mp_utils.py  provider_order.py
eastmoney/: __init__.py  fetch_close_price.py
factor/: __init__.py  alphapurify_momentum.py  alphapurify_obos.py  alphapurify_ssf_common.py  alphapurify_ssf_count.py  alphapurify_ssf_ratio.py  alphapurify_ssf_ratio_change.py  alphapurify_volatility.py  momentum.py  obos.py  volatility.py
fund/: __init__.py  common.py  history_position.py  interface.py  proxy.py  test1.py  test2.py  test5.py  test6.py  test7.py  test_download_fund_info.py  test_download_general_info.py  test_download_history_netvalues.py  tiantian_crawler.py  tiantian_fund.py  tiantian_fund_ut.py  tiantian_parse_position.py
indicator/: __init__.py  obos.py
monitor/: blackroom_countdown.py  blackroom_management_service.py  blackroom_service.py  condition.py  monitor_runner.py  monitor_target_service.py  price_fetcher.py  shareholder_reduction_blackroom_sync.py  shareholder_reduction_punishment.py  shareholder_selling_punishment.py  target_management_service.py  validation.py
ocr/: __init__.py  baidu_ocr.py
sdd/: task-3-report.md
shareholder_monitor/: __init__.py  runner.py  ssf_alert.py  ssf_change_analyzer.py
stock/: __init__.py  common.py  const.py  download_history.py  download_stock_general_info.py  market.py  monitor_stocks.py  support_resistance.py
storage/: __init__.py  config.py  multiprocessing_guide.md  storage_db.py  storage_db.py.backup
strategy/: __init__.py  monitor_stack.py  monitor_stocks.py
task/: __init__.py  download_hk_stock_data.py  download_stock_history.py  monitor_fallback_stock.py  obos_hk.py  small_market_capital_2.py  trend_follow_etf.py
test/: config.ini  download_fund_info.py  get_all_fund_general_info.py  load_stock_history_data.py  test_custom_agents.py  test_download_history_netvalues.py  test_legacy_app_cleanup.py
tools/: 512480vs513310  513100vsNASDAQ  518880vs161226  analyze_world_cup_beer.py  calculate_fluctuation.py  code_simplifier.py  compare_securities.py  compare_stock_list.py  compare_two_securities.py  convert_fund_position_data.py  convert_stock_position_data.py  db_common.sh  db_export.sh  db_import.sh  db_tools.py  demo_code_simplifier.py  download_etf_general_info.py  download_history_data_stock_hk.py  download_hk_ggt_info.py  download_hk_stock_history.py  download_stock_general_info.py  download_stock_history.py  dump_stk_holdernumber.py  filter_stocks.py  frog_cmd.py  grid_trading_screener.py  guotai_parse_position.py  import_stocks.py  monitor_fallback_stocks.py  paper_trading_cli.py  pg_export.sh  pg_import.sh  refresh_support_resistance.py  select_top_stocks.py  shaking_adjustment.py  show_account.py  show_history_position.py  show_support_resistance.py  spot_trading.py  stock_monitor_cli.py  (+6 more)
top10_floatholder/: __init__.py  ssf_change_analyzer.py  ssf_detector.py
trigger/: trigger_obos_hk.py  trigger_trend_follow_etf.py
ut/: download_data_ut.py
utility/: __init__.py  proxy.py  send_email.py  send_email_test.py  utility.py
(+432 files in other folders)
