[project]
name = "frog"
version = "0.1.0"
description = ""
authors = [
    {name = "coneagoe"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "backtrader (>=1.9.78.123,<2.0.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pandas-market-calendars (>=5.1.1,<6.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "quantstats (>=0.0.64,<0.0.65)",
    "ipython (>=9.4.0,<10.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "akshare (>=1.17.20,<2.0.0)",
    "baostock (>=0.8.9,<0.9.0)",
    "retrying (>=1.4.0,<2.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "types-requests (>=2.32.4.20250611,<3.0.0.0)",
    "multitasking @ git+https://github.com/ranaroussi/multitasking.git",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "frog"
version = "0.1.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
mypy = "^1.17.0"
types-requests = "^2.32.4.20250611"
flake8 = "^7.3.0"
apache-airflow = "^3.0.4"

[tool.block]
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

# Exclude app directory
[[tool.mypy.overrides]]
module = "app.*"
ignore_errors = true

# Exclude frog_server.py
[[tool.mypy.overrides]]
module = "frog_server"
ignore_errors = true

# Exclude tools
[[tool.mypy.overrides]]
module = "tools"
ignore_errors = true

# Exclude stock
[[tool.mypy.overrides]]
module = "stock.*"
ignore_errors = true

# Exclude stock
[[tool.mypy.overrides]]
module = "fund.*"
ignore_errors = true
