[project]
name = "frog"
version = "0.1.0"
description = ""
authors = [
    {name = "coneagoe"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "backtrader (>=1.9.78.123,<2.0.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pandas-market-calendars (>=5.1.1,<6.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "quantstats (>=0.0.64,<0.0.65)",
    "ipython (>=9.4.0,<10.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.30.0,<1.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "akshare (>=1.17.20,<2.0.0)",
    "baostock (>=0.8.9,<0.9.0)",
    "tushare (>=1.4.0,<2.0.0)",
    "retrying (>=1.4.0,<2.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "multitasking @ git+https://github.com/ranaroussi/multitasking.git",
    "pytest (>=8.4.2,<9.0.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "tqsdk (>=3.10.1,<4.0.0)"
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0,<5.0.0",
    "ruff>=0.12.0,<1.0.0",
    "types-requests>=2.32.4.20250913,<3.0.0.0",
    "mypy>=1.18.2,<2.0.0",
    "pandas-stubs>=2.3.2.250926,<3.0.0.0",
    "types-tqdm>=4.67.0.20250809,<5.0.0.0",
    "types-psycopg2>=2.9.21.20251012,<3.0.0.0",
    "scipy-stubs>=1.16.3.0,<2.0.0.0",
]
research = [
    "alphapurify>=0.1.8,<0.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.block]
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
package = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

# Exclude app directory
[[tool.mypy.overrides]]
module = "app.*"
ignore_errors = true

# Exclude frog_server.py
[[tool.mypy.overrides]]
module = "frog_server"
ignore_errors = true

# Exclude tools directory
[[tool.mypy.overrides]]
module = "tools.*"
ignore_errors = true

# Exclude stock
[[tool.mypy.overrides]]
module = "stock.*"
ignore_errors = true

# Exclude stock
[[tool.mypy.overrides]]
module = "fund.*"
ignore_errors = true

# Exclude backtest/deprecate directory
[[tool.mypy.overrides]]
module = "backtest.deprecate.*"
ignore_errors = true

# Third-party libraries without type stubs
[[tool.mypy.overrides]]
module = ["akshare.*"]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = ["retrying.*"]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = ["baostock.*"]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tushare.*"]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tqsdk.*"]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = ["pandas_market_calendars", "pandas_market_calendars.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["airflow", "airflow.*"]
ignore_missing_imports = true

[[tool.uv.index]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"

[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"

[[tool.uv.index]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
